// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/Accordion/Accordion Defaults smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_accordionItem_1fab9_1">
      <div class="_tag_1fab9_11">
        <button class="_header_1fab9_14  _header_medium_1fab9_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_1fab9_80">
            <div class="_title_1fab9_80 _title_medium_1fab9_104">
              Meg selv
            </div>
          </div>
          <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_closed_1fab9_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_1fab9_124">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Accordion WithAllColorVariants smoke-test 1`] = `
<div data-test-block="true">
  <div class="bottomSpacingXL">
    <div class="_accordionItem_1fab9_1">
      <div class="_tag_1fab9_11">
        <button class="_header_1fab9_14  _header_medium_1fab9_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_1fab9_80">
            <div class="_title_1fab9_80 _title_medium_1fab9_104">
              Meg selv
            </div>
            <p class="_subtitle_1fab9_111">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_closed_1fab9_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_1fab9_124">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
    <div class="_accordionItem_1fab9_1">
      <div class="_tag_1fab9_11">
        <button class="_header_1fab9_14  _header_medium_1fab9_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_1fab9_80">
            <div class="_title_1fab9_80 _title_medium_1fab9_104">
              Meg selv
            </div>
            <p class="_subtitle_1fab9_111">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_closed_1fab9_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_1fab9_124">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
  </div>
  <div class="_accordion_burgundy_1hopi_14 bottomSpacingXL">
    <div class="_accordionItem_1fab9_1">
      <div class="_tag_1fab9_11">
        <button class="_header_1fab9_14  _header_medium_1fab9_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_1fab9_80">
            <div class="_title_1fab9_80 _title_medium_1fab9_104">
              Meg selv
            </div>
            <p class="_subtitle_1fab9_111">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_closed_1fab9_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_1fab9_124">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
    <div class="_accordionItem_1fab9_1">
      <div class="_tag_1fab9_11">
        <button class="_header_1fab9_14  _header_medium_1fab9_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_1fab9_80">
            <div class="_title_1fab9_80 _title_medium_1fab9_104">
              Meg selv
            </div>
            <p class="_subtitle_1fab9_111">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_closed_1fab9_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_1fab9_124">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
  </div>
  <div class="_accordion_denim_1hopi_8 bottomSpacingXL">
    <div class="_accordionItem_1fab9_1">
      <div class="_tag_1fab9_11">
        <button class="_header_1fab9_14  _header_medium_1fab9_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_1fab9_80">
            <div class="_title_1fab9_80 _title_medium_1fab9_104">
              Meg selv
            </div>
            <p class="_subtitle_1fab9_111">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_closed_1fab9_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_1fab9_124">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
    <div class="_accordionItem_1fab9_1">
      <div class="_tag_1fab9_11">
        <button class="_header_1fab9_14  _header_medium_1fab9_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_1fab9_80">
            <div class="_title_1fab9_80 _title_medium_1fab9_104">
              Meg selv
            </div>
            <p class="_subtitle_1fab9_111">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_closed_1fab9_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_1fab9_124">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
  </div>
  <div class="_accordion_forest_1hopi_5 bottomSpacingXL">
    <div class="_accordionItem_1fab9_1">
      <div class="_tag_1fab9_11">
        <button class="_header_1fab9_14  _header_medium_1fab9_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_1fab9_80">
            <div class="_title_1fab9_80 _title_medium_1fab9_104">
              Meg selv
            </div>
            <p class="_subtitle_1fab9_111">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_closed_1fab9_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_1fab9_124">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
    <div class="_accordionItem_1fab9_1">
      <div class="_tag_1fab9_11">
        <button class="_header_1fab9_14  _header_medium_1fab9_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_1fab9_80">
            <div class="_title_1fab9_80 _title_medium_1fab9_104">
              Meg selv
            </div>
            <p class="_subtitle_1fab9_111">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_closed_1fab9_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_1fab9_124">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
  </div>
  <div class="_accordion_graphite_1hopi_17 bottomSpacingXL">
    <div class="_accordionItem_1fab9_1">
      <div class="_tag_1fab9_11">
        <button class="_header_1fab9_14  _header_medium_1fab9_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_1fab9_80">
            <div class="_title_1fab9_80 _title_medium_1fab9_104">
              Meg selv
            </div>
            <p class="_subtitle_1fab9_111">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_closed_1fab9_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_1fab9_124">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
    <div class="_accordionItem_1fab9_1">
      <div class="_tag_1fab9_11">
        <button class="_header_1fab9_14  _header_medium_1fab9_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_1fab9_80">
            <div class="_title_1fab9_80 _title_medium_1fab9_104">
              Meg selv
            </div>
            <p class="_subtitle_1fab9_111">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_closed_1fab9_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_1fab9_124">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
  </div>
  <div class="_accordion_ochre_1hopi_11 bottomSpacingXL">
    <div class="_accordionItem_1fab9_1">
      <div class="_tag_1fab9_11">
        <button class="_header_1fab9_14  _header_medium_1fab9_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_1fab9_80">
            <div class="_title_1fab9_80 _title_medium_1fab9_104">
              Meg selv
            </div>
            <p class="_subtitle_1fab9_111">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_closed_1fab9_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_1fab9_124">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
    <div class="_accordionItem_1fab9_1">
      <div class="_tag_1fab9_11">
        <button class="_header_1fab9_14  _header_medium_1fab9_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_1fab9_80">
            <div class="_title_1fab9_80 _title_medium_1fab9_104">
              Meg selv
            </div>
            <p class="_subtitle_1fab9_111">
              Beskrivelse
            </p>
          </div>
          <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_closed_1fab9_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_1fab9_124">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Accordion WithAttributes play-test 1`] = `
<div data-test-block="true">
  <div class="dummyClassname"
       lang="nb"
       id="htmlId"
       data-testid="123ID"
  >
    <div class="_accordionItem_1fab9_1">
      <div class="_tag_1fab9_11">
        <button class="_header_1fab9_14  _header_medium_1fab9_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_1fab9_80">
            <div class="_title_1fab9_80 _title_medium_1fab9_104">
              Meg selv
            </div>
          </div>
          <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_closed_1fab9_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_1fab9_124">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Accordion WithIconLeft smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_accordionItem_1fab9_1">
      <div class="_tag_1fab9_11">
        <button class="_header_1fab9_14 _header_iconLeft_1fab9_71 _header_medium_1fab9_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_1fab9_80">
            <div class="_title_1fab9_80 _title_medium_1fab9_104">
              Meg selv
            </div>
          </div>
          <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_closed_1fab9_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_1fab9_124">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Accordion WithLarge smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_accordionItem_1fab9_1">
      <div class="_tag_1fab9_11">
        <button class="_header_1fab9_14  _header_large_1fab9_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_1fab9_80">
            <div class="_title_1fab9_80 _title_large_1fab9_107">
              Meg selv
            </div>
          </div>
          <div class="_iconWrapper_1fab9_84 _iconWrapper_large_1fab9_93">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_large_1fab9_36 _chevron_closed_1fab9_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_1fab9_124">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Accordion WithMedium smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_accordionItem_1fab9_1">
      <div class="_tag_1fab9_11">
        <button class="_header_1fab9_14  _header_medium_1fab9_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_1fab9_80">
            <div class="_title_1fab9_80 _title_medium_1fab9_104">
              Meg selv
            </div>
          </div>
          <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_closed_1fab9_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_1fab9_124">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Accordion WithRef play-test 1`] = `
<div data-test-block="true">
  <div class
       id="dummyIdForwardedFromRef"
  >
    <div class="_accordionItem_1fab9_1">
      <div class="_tag_1fab9_11">
        <button class="_header_1fab9_14  _header_medium_1fab9_75"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_1fab9_80">
            <div class="_title_1fab9_80 _title_medium_1fab9_104">
              Meg selv
            </div>
          </div>
          <div class="_iconWrapper_1fab9_84 _iconWrapper_medium_1fab9_90">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_large_6zbcy_13 _icon_1fab9_18 _chevron_medium_1fab9_33 _chevron_closed_1fab9_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_1fab9_124">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
  </div>
</div>
`;

exports[`Tester/Accordion/Accordion WithSmall smoke-test 1`] = `
<div data-test-block="true">
  <div class>
    <div class="_accordionItem_1fab9_1">
      <div class="_tag_1fab9_11">
        <button class="_header_1fab9_14"
                aria-expanded="false"
                type="button"
        >
          <div class="_titleWrapper_1fab9_80">
            <div class="_title_1fab9_80">
              Meg selv
            </div>
          </div>
          <div class="_iconWrapper_1fab9_84">
            <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_1fab9_18  _chevron_closed_1fab9_30"
                 viewbox="0 0 24 24"
                 focusable="false"
                 aria-hidden="true"
                 role="img"
            >
              <path d="M18.1 7.98001L12 14.08L5.9 7.98001L4 9.88L12 17.88L20 9.88L18.1 7.98001Z">
              </path>
            </svg>
          </div>
        </button>
      </div>
      <div class="_content_collapsed_1fab9_124">
        Fikk du over 1 000 kroner i restskatt, deles summen opp i 2 fakturaer. Fristen for når du må betale avhenger av når du fikk skatteoppgjøret ditt.
      </div>
    </div>
  </div>
</div>
`;
